--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "langchain": "^0.0.66",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
