--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Chat with a GitHub Wiki!",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "ts-node-esm index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
