--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Chat with a GitHub Wiki!",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-esm index.ts",
+    "start": "ts-node-esm -r dotenv/config index.ts",
+    "ingest": "ts-node-esm -r dotenv/config ingest.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
@@ -12,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.66",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
