--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node-esm -r dotenv/config index.ts",
     "ingest": "ts-node-esm -r dotenv/config ingest.ts",
+    "test-ingest": "ts-node-esm -r dotenv/config test-ingest.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
