--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node-esm -r dotenv/config index.ts",
     "ingest": "ts-node-esm -r dotenv/config ingest.ts",
     "test-ingest": "ts-node-esm -r dotenv/config test-ingest.ts",
+    "test-question": "ts-node-esm -r dotenv/config test-question.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
